Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24191

Windows: QPrinter autotest fails

XMLWordPrintable

    • b188221fee0eaacec115b514185a0508ef655897

      Windows: QPrinter autotest fails:

      FAIL!  : tst_QPrinter::valuePreservation() Compared values are not the same
         Actual (printer.collateCopies()): 0
         Expected (!status): 1
      .\tst_qprinter.cpp(638) : failure location
      

      Remember to enable the test in CI after it has been fixed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes